--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -435,6 +435,37 @@
 			}
 		}
 	}
+
+
+	/* Panels - National Focal Points, etc. */
+	.profile-2-cols-container-3 .view-partner-content{
+		width: 100%;
+    	margin: 0;
+	}
+
+	.profile-2-cols-container-3 .profile-col-right-3 {
+		padding-top: 2em;
+	    padding-left: 0;
+	}
+
+	.panels-flexible-column-inside-first .panels-flexible-region-first {
+	    float: none;
+	    padding-right: 0;
+	}
+
+	.panels-flexible-region .hwc-share-widget ul .share-this-article {
+	    float: left;
+	    padding-top: 10px;
+	}
+
+	.panels-flexible-row .hwc-share-widget{
+		padding-right: 1em;
+	}
+
+	.panels-flexible-column-last {
+	    padding-left: 0 !important;
+	}
+
 }
 
 
