--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -323,6 +323,16 @@
 		top: -6px;
 	}
 
+
+	/* Panels - National Focal Points, etc. */
+	.panels-flexible-column-inside-first .profile-col-left-middle-2{
+		width: 100%;
+	}
+
+	.main-container .panels-flexible-row h2{
+		margin-left: 0
+	}
+
 	/*Footer*/
 	.footer-section{
 		display: none;
